Using List.of, Set.of and Map.of