@@ -38,16 +38,16 @@ public final class KafkaLedgerTest {
   public static List<Object[]> data() {
     return TestCycle.timesQuietly(1);
   }
-  
+
   private final Timesert wait = Wait.SHORT;
-  
+
   private KafkaLedger ledger;
-  
+
   @After
   public void after() {
     if (ledger != null) ledger.dispose();
   }
-  
+
   private static KafkaLedger createLedger(Kafka<String, Message> kafka, 
                                           boolean asyncProducer, 
                                           boolean asyncConsumer, 
@@ -56,7 +56,7 @@ public final class KafkaLedgerTest {
     final var ledgerConfig = new KafkaLedgerConfig().withMaxConsumerPipeYields(1);
     return createLedger(kafka, ledgerConfig, asyncProducer, asyncConsumer, pipelineSizeBatches, zlg);
   }
-  
+
   private static KafkaLedger createLedger(Kafka<String, Message> kafka, 
                                           KafkaLedgerConfig baseConfig,
                                           boolean asyncProducer, 
@@ -74,7 +74,7 @@ public final class KafkaLedgerTest {
                                                    .withAsync(asyncConsumer)
                                                    .withBacklogBatches(pipelineSizeBatches)));
   }
-  
+
   @Test
   public void testPipelineBackoff() {
     final var kafka = new MockKafka<String, Message>();
@@ -93,7 +93,7 @@ public final class KafkaLedgerTest {
         received.incrementAndGet();
       }
     });
-    
+
     ledger.append(new Proposal("B100", new String[0], null, 0));
     Threads.await(barrierA);
     ledger.append(new Proposal("B200", new String[0], null, 0));
@@ -103,7 +103,7 @@ public final class KafkaLedgerTest {
     Threads.await(barrierB);
     wait.until(() -> assertEquals(3, received.get()));
   }
-  
+
   @Test
   public void testAppend_sendCallbackExceptionLoggerPass() {
     final var logTarget = new MockLogTarget();
@@ -113,7 +113,7 @@ public final class KafkaLedgerTest {
     ledger.append(new Proposal("B100", new String[0], null, 0));
     assertEquals(0, logTarget.entries().forLevel(LogLevel.WARN).list().size());
   }
-  
+
   @Test
   public void testAppend_sendCallbackExceptionLoggerFail() {
     final var logTarget = new MockLogTarget();
@@ -122,12 +122,12 @@ public final class KafkaLedgerTest {
         .withSendCallbackExceptionGenerator(ExceptionGenerator.once(exception));
     ledger = createLedger(kafka, false, true, 10, logTarget.logger());
     ledger.append(new Proposal("B100", new String[0], null, 0), AppendCallback.nop());
-    
+
     wait.until(() -> {
       logTarget.entries().forLevel(LogLevel.WARN).withThrowable(exception).assertCount(1);
     });
   }
-  
+
   @Test
   public void testAppend_sendCallbackRetriableException() {
     final var logTarget = new MockLogTarget();
@@ -135,18 +135,18 @@ public final class KafkaLedgerTest {
     final var exGen = ExceptionGenerator.times(exception, 2);
     final var mockExGen = Classes.<ExceptionGenerator<ProducerRecord<String, Message>, Exception>>cast(mock(ExceptionGenerator.class));
     when(mockExGen.inspect(any())).thenAnswer(invocation -> exGen.inspect(invocation.getArgument(0)));
-    
+
     final var kafka = new MockKafka<String, Message>()
         .withSendCallbackExceptionGenerator(mockExGen);
     ledger = createLedger(kafka, false, true, 10, logTarget.logger());
     ledger.append(new Proposal("B100", new String[0], null, 0), AppendCallback.nop());
-    
+
     wait.until(() -> {
       logTarget.entries().forLevel(LogLevel.WARN).withThrowable(exception).assertCount(2);
       verify(mockExGen, times(3)).inspect(any());
     });
   }
-  
+
   @Test
   public void testSend_runtimeException() {
     final var logTarget = new MockLogTarget();
@@ -158,7 +158,7 @@ public final class KafkaLedgerTest {
       logTarget.entries().forLevel(LogLevel.WARN).withThrowableType(ProducerException.class).assertCount(1);
     });
   }
-  
+
   @Test
   public void testAttach_grouped_commitCallbackExceptionLogger() {
     final var logTarget = new MockLogTarget();
@@ -195,7 +195,7 @@ public final class KafkaLedgerTest {
       logTarget.entries().forLevel(LogLevel.WARN).containing("Error committing offsets").withThrowable(exception).assertCount(1);
     });
   }
-  
+
   @Test
   public void testAttach_grouped_receiveNormal() {
     final var logTarget = new MockLogTarget();
@@ -203,7 +203,7 @@ public final class KafkaLedgerTest {
     final var kafka = new MockKafka<String, Message>(1, 100);
     final var baseConfig = new KafkaLedgerConfig().withDrainConfirmations(true);
     ledger = createLedger(kafka, baseConfig, false, false, 10, logTarget.logger());
-    
+
     final var received = new AtomicInteger();
     ledger.attach(new MessageHandler() {
       @Override
@@ -223,20 +223,20 @@ public final class KafkaLedgerTest {
         received.incrementAndGet();
       }
     });
-    
+
     ledger.append(new Proposal("B100", new String[0], null, 0));
     wait.until(() -> {
       assertEquals(1, received.get());
     });
   }
-  
+
   @Test
   public void testAttach_ungrouped_receiveNormal() {
     final var logTarget = new MockLogTarget();
     final var kafka = new MockKafka<String, Message>(1, 100);
     final var baseConfig = new KafkaLedgerConfig().withDrainConfirmations(true);
     ledger = createLedger(kafka, baseConfig, false, false, 10, logTarget.logger());
-    
+
     final var received = new AtomicInteger();
     ledger.attach(new NullGroupMessageHandler() {
       @Override
@@ -251,20 +251,20 @@ public final class KafkaLedgerTest {
         received.incrementAndGet();
       }
     });
-    
+
     ledger.append(new Proposal("B100", new String[0], null, 0));
     wait.until(() -> {
       assertEquals(1, received.get());
     });
   }
-  
+
   @Test
   public void testAttach_afterDispose() {
     ledger = MockKafkaLedger.create();
     assertFalse(ledger.isDisposing());
     ledger.dispose();
     assertTrue(ledger.isDisposing());
-    
+
     final var handler = mock(MessageHandler.class);
     ledger.attach(handler);
 
@@ -272,7 +272,7 @@ public final class KafkaLedgerTest {
     Threads.sleep(10);
     verifyNoMoreInteractions(handler);
   }
-  
+
   @Test
   public void testAppend_afterDispose() {
     ledger = MockKafkaLedger.create();
@@ -284,50 +284,50 @@ public final class KafkaLedgerTest {
     Threads.sleep(10);
     verifyNoMoreInteractions(callback);
   }
-  
+
   @Test
   public void testHandleRecord_withNoConsumerState() {
     final var handler = mock(MessageHandler.class);
     final var message = new Command("xid", null, 0);
     final var record = new ConsumerRecord<String, Message>("topic", 0, 0L, "key", message);
     final var logTarget = new MockLogTarget();
-    
+
     KafkaLedger.handleRecord(handler, null, null, record, logTarget.logger());
     verify(handler).onMessage(isNull(), eq(message));
     logTarget.entries().assertCount(0);
   }
-  
+
   @Test
   public void testHandleRecord_withAssignedTopic_enforceMonotonicity() {
     final var handler = mock(MessageHandler.class);
     final var consumerState = new ConsumerState(true);
-    consumerState.assignedPartitions = new HashSet<>(Arrays.asList(0));
+    consumerState.assignedPartitions = Set.of(0);
     final var message = new Command("xid", null, 0);
     final var record = new ConsumerRecord<String, Message>("topic", 0, 0L, "key", message);
     final var logTarget = new MockLogTarget();
-    
+
     KafkaLedger.handleRecord(handler, consumerState, null, record, logTarget.logger());
     verify(handler).onMessage(isNull(), eq(message));
     logTarget.entries().assertCount(0);
   }
-  
+
   @Test
   public void testHandleRecord_withMonotonicConstraintBreach() {
     final var handler = mock(MessageHandler.class);
     final var consumerState = new ConsumerState(true);
-    consumerState.assignedPartitions = new HashSet<>(Arrays.asList(0));
+    consumerState.assignedPartitions = Set.of(0);
     consumerState.offsetsProcessed.computeIfAbsent(0, __ -> new MutableOffset()).offset = 0;
     final var message = new Command("xid", null, 0);
     final var record = new ConsumerRecord<String, Message>("topic", 0, 0L, "key", message);
     final var logTarget = new MockLogTarget();
-    
+
     KafkaLedger.handleRecord(handler, consumerState, null, record, logTarget.logger());
     verify(handler, never()).onMessage(isNull(), eq(message));
     logTarget.entries().assertCount(1);
     logTarget.entries().forLevel(LogLevel.DEBUG)
     .containing("Skipping message at offset 0, partition 0: monotonicity constraint breached (previous offset: 0)").assertCount(1);
   }
-  
+
   @Test
   public void testHandleRecord_withUnassignedTopic() {
     final var handler = mock(MessageHandler.class);
@@ -335,58 +335,58 @@ public final class KafkaLedgerTest {
     final var message = new Command("xid", null, 0);
     final var record = new ConsumerRecord<String, Message>("topic", 0, 0L, "key", message);
     final var logTarget = new MockLogTarget();
-    
+
     KafkaLedger.handleRecord(handler, consumerState, null, record, logTarget.logger());
     verify(handler, never()).onMessage(isNull(), eq(message));
     logTarget.entries().assertCount(1);
     logTarget.entries().forLevel(LogLevel.DEBUG)
     .containing("Skipping message at offset 0: partition 0 has been reassigned").assertCount(1);
   }
-  
+
   @Test
   public void testConfirm_intermediate() {
     final var messageId = new DefaultMessageId(0, 100L);
     final var consumerState = new ConsumerState(false);
     consumerState.offsetsPending.put(0, 200L);
     final var logTarget = new MockLogTarget();
-    
+
     KafkaLedger.confirm(messageId, consumerState, "topic", logTarget.logger());
     assertTrue(consumerState.offsetsConfirmed.containsKey(new TopicPartition("topic", 0)));
     assertTrue(consumerState.offsetsConfirmed.containsValue(new OffsetAndMetadata(101L)));
     logTarget.entries().assertCount(1);
     logTarget.entries().forLevel(LogLevel.TRACE).containing("Confirmed intermediate 100 from 200 (partition 0)").assertCount(1);
   }
-  
+
   @Test
   public void testConfirm_last() {
     final var messageId = new DefaultMessageId(0, 100L);
     final var consumerState = new ConsumerState(false);
     consumerState.offsetsPending.put(0, 100L);
     final var logTarget = new MockLogTarget();
-    
+
     KafkaLedger.confirm(messageId, consumerState, "topic", logTarget.logger());
     assertTrue(consumerState.offsetsConfirmed.containsKey(new TopicPartition("topic", 0)));
     assertTrue(consumerState.offsetsConfirmed.containsValue(new OffsetAndMetadata(101L)));
     logTarget.entries().assertCount(1);
     logTarget.entries().forLevel(LogLevel.TRACE).containing("Confirmed last 100 (partition 0)").assertCount(1);
   }
-  
+
   @Test
   public void testCommitOffsets_withEnqueued_enforceMonotonic() {
     final var consumer = Classes.<Consumer<String, Message>>cast(mock(Consumer.class));
     doAnswer(invocation -> {
       final var callback = invocation.getArgument(1, OffsetCommitCallback.class);
-      callback.onComplete(emptyMap(), null);
+      callback.onComplete(Map.of(), null);
       return null;
     }).when(consumer).commitAsync(any(), any());
-    
+
     final var consumerState = new ConsumerState(true);
     final var logTarget = new MockLogTarget();
     final var topicPartition = new TopicPartition("topic", 0);
     final var offsetsAndMetadata = new OffsetAndMetadata(100L);
     consumerState.offsetsConfirmed.put(topicPartition, offsetsAndMetadata);
     final var offsetsConfirmed = consumerState.offsetsConfirmed;
-    
+
     KafkaLedger.commitOffsets(consumer, consumerState, logTarget.logger());
     assertEquals(1, consumerState.offsetsProcessed.size());
     assertEquals(offsetsAndMetadata.offset() - 1, consumerState.offsetsProcessed.get(topicPartition.partition()).offset);
@@ -394,82 +394,82 @@ public final class KafkaLedgerTest {
     logTarget.entries().forLevel(LogLevel.TRACE).containing("Committing offsets {0=100}").assertCount(1);
     verify(consumer).commitAsync(eq(offsetsConfirmed), isNotNull());
   }
-  
+
   @Test
   public void testCommitOffsets_withEnqueued_nonMonotonic() {
     final var consumer = Classes.<Consumer<String, Message>>cast(mock(Consumer.class));
     doAnswer(invocation -> {
       final var callback = invocation.getArgument(1, OffsetCommitCallback.class);
-      callback.onComplete(emptyMap(), null);
+      callback.onComplete(Map.of(), null);
       return null;
     }).when(consumer).commitAsync(any(), any());
-    
+
     final var consumerState = new ConsumerState(false);
     final var logTarget = new MockLogTarget();
     final var topicPartition = new TopicPartition("topic", 0);
     final var offsetsAndMetadata = new OffsetAndMetadata(100L);
     consumerState.offsetsConfirmed.put(topicPartition, offsetsAndMetadata);
     final var offsetsConfirmed = consumerState.offsetsConfirmed;
-    
+
     KafkaLedger.commitOffsets(consumer, consumerState, logTarget.logger());
     logTarget.entries().assertCount(1);
     logTarget.entries().forLevel(LogLevel.TRACE).containing("Committing offsets {0=100}").assertCount(1);
     verify(consumer).commitAsync(eq(offsetsConfirmed), isNotNull());
   }
-  
+
   @Test
   public void testCommitOffsets_withNoneEnqueued_enforceMonotonic() {
     final var consumer = Classes.<Consumer<String, Message>>cast(mock(Consumer.class));
     doAnswer(invocation -> {
       final var callback = invocation.getArgument(1, OffsetCommitCallback.class);
-      callback.onComplete(emptyMap(), null);
+      callback.onComplete(Map.of(), null);
       return null;
     }).when(consumer).commitAsync(any(), any());
     final var consumerState = new ConsumerState(true);
     final var logTarget = new MockLogTarget();
-    
+
     KafkaLedger.commitOffsets(consumer, consumerState, logTarget.logger());
     assertTrue(consumerState.offsetsProcessed.isEmpty());
     logTarget.entries().assertCount(0);
     verify(consumer, never()).commitAsync(any(), isNotNull());
   }
-  
+
   @Test
   public void testCommitOffsets_withNoneEnqueued_nonMonotonic() {
     final var consumer = Classes.<Consumer<String, Message>>cast(mock(Consumer.class));
     doAnswer(invocation -> {
       final var callback = invocation.getArgument(1, OffsetCommitCallback.class);
-      callback.onComplete(emptyMap(), null);
+      callback.onComplete(Map.of(), null);
       return null;
     }).when(consumer).commitAsync(any(), any());
     final var consumerState = new ConsumerState(false);
     assertNull(consumerState.offsetsProcessed);
     final var logTarget = new MockLogTarget();
-    
+
     KafkaLedger.commitOffsets(consumer, consumerState, logTarget.logger());
     logTarget.entries().assertCount(0);
     verify(consumer, never()).commitAsync(any(), isNotNull());
   }
-  
+
   @Test
   public void testSleepFor() {
     KafkaLedger.sleepFor(0).run();
   }
-  
+
   @Test
   public void testDrainOffsets_withNoPendingOffsets() {
     final var consumer = Classes.<Consumer<String, Message>>cast(mock(Consumer.class));
     final var consumerState = new ConsumerState(false);
     final var logTarget = new MockLogTarget();
     final var intervalSleep = mock(Runnable.class);
-    
+
     final var disposing = new AtomicBoolean();
     KafkaLedger.drainOffsets("topic", consumer, consumerState, 1, intervalSleep, 10_000, disposing::get, logTarget.logger());
     logTarget.entries().assertCount(1);
     logTarget.entries().forLevel(LogLevel.DEBUG).containing("All offsets confirmed: {}").assertCount(1);
     verify(consumer, never()).commitSync(Classes.<Map<TopicPartition, OffsetAndMetadata>>cast(any(Map.class)));
   }
-  
+
   @Test
   public void testDrainOffsets_withPendingOffsets() {
     final var consumer = Classes.<Consumer<String, Message>>cast(mock(Consumer.class));
@@ -484,16 +484,16 @@ public final class KafkaLedgerTest {
       }
       return null;
     }).when(intervalSleep).run();
-    
+
     final var disposing = new AtomicBoolean();
     KafkaLedger.drainOffsets("topic", consumer, consumerState, 1, intervalSleep, 10_000, disposing::get, logTarget.logger());
     logTarget.entries().assertCount(2);
     logTarget.entries().forLevel(LogLevel.DEBUG).containing("All offsets confirmed: {0=100}").assertCount(1);
     logTarget.entries().forLevel(LogLevel.DEBUG).containing("Offsets pending: {0=100}").assertCount(1);
-    final var expectedOffsets = singletonMap(new TopicPartition("topic", 0), new OffsetAndMetadata(101L));
+    final var expectedOffsets = Map.of(new TopicPartition("topic", 0), new OffsetAndMetadata(101L));
     verify(consumer).commitSync(eq(expectedOffsets));
   }
-  
+
   @Test
   public void testDrainOffsets_withPendingOffsetsTimeout() {
     final var consumer = Classes.<Consumer<String, Message>>cast(mock(Consumer.class));
@@ -501,7 +501,7 @@ public final class KafkaLedgerTest {
     final var logTarget = new MockLogTarget();
     final var intervalSleep = mock(Runnable.class);
     consumerState.offsetsPending.put(0, 100L);
-    
+
     final var disposing = new AtomicBoolean();
     KafkaLedger.drainOffsets("topic", consumer, consumerState, 1, intervalSleep, 0, disposing::get, logTarget.logger());
     logTarget.entries().assertCount(2);
@@ -509,20 +509,20 @@ public final class KafkaLedgerTest {
     logTarget.entries().forLevel(LogLevel.WARN).containing("Drain timed out (0 ms). Pending offsets: {0:100}, 0 record(s) queued");
     verify(consumer, never()).commitSync(Classes.<Map<TopicPartition, OffsetAndMetadata>>cast(any(Map.class)));
   }
-  
+
   @Test
   public void testDrainOffsets_whileDisposing() {
     final var consumer = Classes.<Consumer<String, Message>>cast(mock(Consumer.class));
     final var consumerState = new ConsumerState(false);
     final var logTarget = new MockLogTarget();
     final var intervalSleep = mock(Runnable.class);
-    
+
     final var disposing = new AtomicBoolean(true);
     KafkaLedger.drainOffsets("topic", consumer, consumerState, 1, intervalSleep, 10_000, disposing::get, logTarget.logger());
     logTarget.entries().assertCount(0);
     verify(consumer, never()).commitSync(Classes.<Map<TopicPartition, OffsetAndMetadata>>cast(any(Map.class)));
   }
-  
+
   @Test
   public void testDrainOffsets_withBackloggedPipeline() {
     final var consumer = Classes.<Consumer<String, Message>>cast(mock(Consumer.class));
@@ -537,48 +537,48 @@ public final class KafkaLedgerTest {
       }
       return null;
     }).when(intervalSleep).run();
-    
+
     final var disposing = new AtomicBoolean();
     KafkaLedger.drainOffsets("topic", consumer, consumerState, 1, intervalSleep, 10_000, disposing::get, logTarget.logger());
     logTarget.entries().assertCount(2);
     logTarget.entries().forLevel(LogLevel.DEBUG).containing("All offsets confirmed: {0=100}").assertCount(1);
     logTarget.entries().forLevel(LogLevel.DEBUG).containing("Pipeline backlogged: 1 record(s) queued").assertCount(1);
-    final var expectedOffsets = singletonMap(new TopicPartition("topic", 0), new OffsetAndMetadata(101L));
+    final var expectedOffsets = Map.of(new TopicPartition("topic", 0), new OffsetAndMetadata(101L));
     verify(consumer).commitSync(eq(expectedOffsets));
   }
-  
+
   @Test
   public void testQueueRecords_withConsumerStateAndAssignedPartitions() throws InterruptedException {
     final var consumerState = new ConsumerState(false);
-    consumerState.assignedPartitions = singleton(0);
+    consumerState.assignedPartitions = Set.of(0);
     final var logTarget = new MockLogTarget();
     final var consumer = Classes.<Consumer<String, Message>>cast(mock(Consumer.class));
     final var recordHandler = Classes.<RecordHandler<String, Message>>cast(mock(RecordHandler.class));
     final var consumerPipe = new ConsumerPipe<>(new ConsumerPipeConfig().withAsync(false), recordHandler, null);
     final var records = getSingletonBatch();
-    
+
     KafkaLedger.queueRecords(consumer, consumerState, consumerPipe, records, 1, logTarget.logger());
     verify(recordHandler).onReceive(isNotNull());
     assertEquals(1, consumerState.queuedRecords);
     logTarget.entries().assertCount(0);
   }
-  
+
   @Test
   public void testQueueRecords_withConsumerStateAndNoAssignedPartitions() throws InterruptedException {
     final var consumerState = new ConsumerState(false);
-    consumerState.assignedPartitions = emptySet();
+    consumerState.assignedPartitions = Set.of();
     final var logTarget = new MockLogTarget();
     final var consumer = Classes.<Consumer<String, Message>>cast(mock(Consumer.class));
     final var recordHandler = Classes.<RecordHandler<String, Message>>cast(mock(RecordHandler.class));
     final var consumerPipe = new ConsumerPipe<>(new ConsumerPipeConfig().withAsync(false), recordHandler, null);
     final var records = getSingletonBatch();
-    
+
     KafkaLedger.queueRecords(consumer, consumerState, consumerPipe, records, 1, logTarget.logger());
     verifyNoMoreInteractions(recordHandler);
     assertEquals(0, consumerState.queuedRecords);
     logTarget.entries().assertCount(0);
   }
-  
+
   @Test
   public void testQueueRecords_withoutConsumerState() throws InterruptedException {
     final var logTarget = new MockLogTarget();
@@ -586,26 +586,26 @@ public final class KafkaLedgerTest {
     final var recordHandler = Classes.<RecordHandler<String, Message>>cast(mock(RecordHandler.class));
     final var consumerPipe = new ConsumerPipe<>(new ConsumerPipeConfig().withAsync(false), recordHandler, null);
     final var records = getSingletonBatch();
-    
+
     KafkaLedger.queueRecords(consumer, null, consumerPipe, records, 1, logTarget.logger());
     verify(recordHandler).onReceive(isNotNull());
     logTarget.entries().assertCount(0);
   }
-  
+
   @Test
   public void testMutableOffset_tryAdvance() {
     final var mutableOffset = new MutableOffset();
     assertTrue(mutableOffset.tryAdvance(0));
     assertEquals(0, mutableOffset.offset);
-    
+
     assertFalse(mutableOffset.tryAdvance(0));
     assertEquals(0, mutableOffset.offset);
   }
-  
+
   private static ConsumerRecords<String, Message> getSingletonBatch() {
     final var key = "key";
     final var value = (Message) null;
-    return new ConsumerRecords<>(singletonMap(new TopicPartition("topic", 0), 
-                                              singletonList(new ConsumerRecord<>("topic", 0, 0L, key, value))));
+    return new ConsumerRecords<>(Map.of(new TopicPartition("topic", 0), 
+                                        singletonList(new ConsumerRecord<>("topic", 0, 0L, key, value))));
   }
 }
