@@ -16,12 +16,12 @@ public final class BankSettlement {
   public Map<String, BalanceTransfer> getTransfers() {
     return transfers;
   }
-  
+
   @Override
   public int hashCode() {
     return new HashCodeBuilder().append(transfers).toHashCode();
   }
-  
+
   @Override
   public boolean equals(Object obj) {
     if (this == obj) {
@@ -38,30 +38,30 @@ public final class BankSettlement {
   public String toString() {
     return BankSettlement.class.getSimpleName() + " [xfers=" + transfers.values() + "]";
   }
-  
+
   public static BankSettlement forTwo(long amount) {
     return builder()
         .withTransfers(new BalanceTransfer(BankBranch.getId(0), -amount), 
                        new BalanceTransfer(BankBranch.getId(1), amount))
         .build();
   }
-  
+
   public static BankSettlementBuilder builder() {
     return new BankSettlementBuilder();
   }
-  
+
   public static final class BankSettlementBuilder {
     private final List<BalanceTransfer> transfers = new ArrayList<>();
-    
+
     public BankSettlementBuilder withTransfers(BalanceTransfer... transfers) {
-      return withTransfers(Arrays.asList(transfers));
+      return withTransfers(List.of(transfers));
     }
-    
+
     public BankSettlementBuilder withTransfers(List<BalanceTransfer> transfers) {
       this.transfers.addAll(transfers);
       return this;
     }
-    
+
     public BankSettlement build() {
       return new BankSettlement(transfers.stream().collect(Collectors.toMap(t -> t.getBranchId(), Function.identity())));
     }
